new search options: group by forum, search by date, search subject and body separately